syntax = "proto3";

package social.session.v1;

option java_multiple_files = true;
option java_package = "org.com.shared.proto.social.session.v1";
option java_outer_classname = "SessionServiceProto";

service SessionService {
  rpc GetSession (GetSessionRequest) returns (GetSessionResponse);
  rpc ListSessionMembers (ListSessionMembersRequest) returns (ListSessionMembersResponse);
  rpc CheckSendPermission (CheckSendPermissionRequest) returns (CheckSendPermissionResponse);
}

message GetSessionRequest {
  int64 session_id = 1;
}

message GetSessionResponse {
  bool found = 1;
  int32 session_type = 2;
  int32 state = 3;
  uint64 message_flags = 4;
}

message ListSessionMembersRequest {
  int64 session_id = 1;
}

message SessionMember {
  int64 user_id = 1;
  int32 role = 2;
  bool is_active = 3;
}

message ListSessionMembersResponse {
  repeated SessionMember members = 1;
}

message CheckSendPermissionRequest {
  int64 session_id = 1;
  int64 user_id = 2;
  uint32 partition_id = 3;
}

message CheckSendPermissionResponse {
  bool allowed = 1;
  string reason = 2;
  uint64 message_flags = 3;
}
